--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,77 +1,77 @@
-#navBar{
+#navBar {
     background-color: #f7f7f7;
     height: 100px;
 }
 
-#mobileBar{
+#mobileBar {
     visibility: hidden;
 }
 
-ul li{
+ul li {
     align-self: center;
     width: 150px;
 }
 
-ul li a{
+ul li a {
     color: black;
 }
 
-#imageLogo{
+#imageLogo {
     width: 130px;
     height: 100px;
 }
 
 /* mobile screen */
-@media screen and (max-width: 600px){
-    #mobile_navbar{
-        display:flex;
+@media screen and (max-width: 600px) {
+    #mobile_navbar {
+        display: flex;
         justify-content: space-between;
         visibility: visible;
-        width:100vw;
+        width: 100vw;
         background-color: #f7f7f7;
     }
 
-    #navBar{
+    #navBar {
         visibility: hidden;
     }
 
-    #mobile_banner{
+    #mobile_banner {
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
     }
-    
-    #banner_logo_mobile{
+
+    #banner_logo_mobile {
         height: 90px;
-        width: 100px;        
-        float:right;
+        width: 100px;
+        float: right;
     }
 
-    #sidebar{
+    #sidebar {
         visibility: visible;
-        height: 100%;
+        height: 100vh;
         width: 0vw;
         position: fixed;
         z-index: 200;
-        background-color: #F7F7F7;
+        background-color: #f7f7f7;
         transition: 0.8s;
         padding-top: 60px;
         overflow-x: hidden;
-        left:0;
+        left: 0;
         margin-top: 350px;
     }
 
-    #close_navbar{
-        display:flex;
+    #close_navbar {
+        display: flex;
         flex-direction: row;
         justify-content: flex-end;
         font-size: 20px;
         color: grey;
     }
 
-    #mobile_nav_links{
-      height: 100%;
-      display:flex;
-      flex-direction: column;
+    #mobile_nav_links {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
     }
 }
